SAK-45361 Multiple dark mode fixes (#9288)
* SAK-45361 incorporate 
  SAK-45468
  SAK-45300
  SAK-45286
  SAK-45271
  SAK-45273
  SAK-45274
  SAK-45272
  SAK-45275
  SAK-45146
  SAK-45250
  SAK-45249
  SAK-45248
  SAK-45247
  SAK-45144

--- a/samigo/samigo-app/src/webapp/css/print/print.css
+++ b/samigo/samigo-app/src/webapp/css/print/print.css
@@ -98,7 +98,7 @@ blockquote {
 
 #quizWrapper {
   border: 1px solid #999999;
-  background-color: #ffffff;
+  background-color: none;
   margin: 25px;
   padding: 25px;
   font-size: 16px;
@@ -107,7 +107,7 @@ blockquote {
 t .navModeAction {
   padding: 5px;
   line-height: 2.5em;
-  background: #fff;
+  background: none;
   margin: 0 1.5em;
   border: 1px solid #999;
 }
